test/service/echoserver/ingress.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
    annotations:
        nginx.ingress.kubernetes.io/auth-tls-verify-client: \"on\"
        nginx.ingress.kubernetes.io/auth-tls-verify-secret: \"default/my-certs\"
    name: meow-ingress
    namespace: default
spec:
    rules:
        - host: meow.com
          http:
              paths:
                  - backend:
                      serviceName: meow-svc
                      servicePort: 80
                    path: /
    tls:
        - hosts:
            - meow.com
          secretName: my-certs
